test/mutation_analysis/s0989_add_to_array_form_of_integer/hafis/starchat/mutants/32/result.txt
./test/mutation_analysis/s0989_add_to_array_form_of_integer/hafis/starchat/mutants/32/Solution.java:32: error: unreachable statement
        while (false) {
                      ^
1 error
